# traffic_management_rl

./: README.md  pyproject.toml
detraffic_a3cgcn/: .gitignore  __init__.py  a3c.py  env.py  gcn.py  train.py  train1.py  utils.py
detraffic_a3cgcn/runs/May09_23-18-22_MacBook-Pro.local/: events.out.tfevents.1715285902.MacBook-Pro.local.42979.0
