[tool.poetry]
name = "detraffic-a3cgcn"
version = "0.1.0"
description = ""
authors = ["Volkan Bakır <volkanbakir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.2"
sumo-rl = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
